--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,9 +81,9 @@ a {
     font-weight: 700;
     font-size: 40px;
     height: 170px;
-    margin-top: 100px;
-    padding-top: 200px;
-    padding-bottom: 100px;
+    margin-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .footer2 {
@@ -95,4 +95,8 @@ a {
 .footer2 img {
     height: 100px;
     width: 53px;
+}
+
+i {
+    font-size: 53px;
 }
